# Trinities

./: README.adoc  Trinities.cabal  TrinitySnapshotTest-12_20-12_22.csv
app/: Main.hs
data/: Improvements.csv  TrinitySnapshotTest-12_20-12_22.csv
